infra/k8s/user-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - name: user
          image: cygnetops/user-95
---
apiVersion: v1
kind: Service
metadata:
  name: user-clusterip-srv
spec:
  selector:
    app: user
  ports:
    - name: user
      protocol: TCP
      port: 4000
      targetPort: 4000
