infra/k8s/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginxapp1-ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:  
  rules:
  - http:
      paths:
      - path: /api/login
        backend:
          serviceName: user-clusterip-srv
          servicePort: 5000
      - path: /api/user
        backend:
          serviceName: query-clusterip-srv
          servicePort: 5001
      - path: /
        backend:
          serviceName: client-srv
          servicePort: 3000
